--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/styled-engine": "^5.15.11",
     "firebase": "^10.7.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
