--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/styled-engine": "^5.15.11",
+    "emotion-reset": "^3.0.1",
     "firebase": "^10.7.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
