--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "typescript": "^5.4.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.6",
@@ -37,7 +38,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.3.3",
     "vite": "^5.0.8"
   }
 }
