--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
+    "react-textarea-autosize": "^8.5.3",
     "typescript": "^5.4.3"
   },
   "devDependencies": {
